@@ -1,4 +1,5 @@
 1.3.15
+Added: Config to make every mob spawn as a blight (be careful with that) (#102)
 Changed: Disabling custom heart rendering will now override and disable health text settings (#104)
 Fixed (maybe): Desync of health on server when Scaling Health is not allowed to modify health (#104)
 
